--- a/1.1_using_jupyter/using_jupyter_(good).ipynb
+++ b/1.1_using_jupyter/using_jupyter_(good).ipynb
@@ -1,1 +1,421 @@
-{"cells": [{"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["<div style=\"text-align:left;font-size:2em\"><span style=\"font-weight:bolder;font-size:1.25em\">SP2273 | Learning Portfolio</span><br><br><span style=\"font-weight:bold;color:darkred\">Using Jupyter (Good)</span></div>"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["# What to expect in this chapter"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["# 1 Some tips and tricks"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## 1.1 Keyboard Shortcuts"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["### Things to note"]}, {"cell_type": "code", "id": "123456", "metadata": {}, "execution_count": null, "outputs": [], "source": ["\n# Your code here\n"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## 1.2 Shell commands"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["# 2 Install Notebook 7"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["# Jupyter Extensions"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## Installing the extensions"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## Enabling the extensions"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["# 3 Shell Magic"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["# 4 The Kernel"]}], "metadata": {"kernelspec": {"display_name": "Python 3", "language": "python", "name": "python3"}, "language_info": {"codemirror_mode": {"name": "ipython", "version": 3}, "file_extension": ".py", "mimetype": "text/x-python", "name": "python", "nbconvert_exporter": "python", "pygments_lexer": "ipython3", "version": "3.10.6 (main, Nov 14 2022, 16:10:14) [GCC 11.3.0]"}, "toc": {"base_numbering": 1, "nav_menu": {}, "number_sections": true, "sideBar": true, "skip_h1_title": false, "title_cell": "Table of Contents", "title_sidebar": "Contents", "toc_cell": false, "toc_position": {}, "toc_section_display": true, "toc_window_display": false}, "vscode": {"interpreter": {"hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"}}}, "nbformat": 4, "nbformat_minor": 5}
+{
+ "cells": [
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "123456",
+   "metadata": {},
+   "source": [
+    "<div style=\"text-align:left;font-size:2em\"><span style=\"font-weight:bolder;font-size:1.25em\">SP2273 | Learning Portfolio</span><br><br><span style=\"font-weight:bold;color:darkred\">Using Jupyter (Good)</span></div>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "df8f0710",
+   "metadata": {},
+   "source": [
+    "# What to expect in this chapter"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "bf6b88c7",
+   "metadata": {},
+   "source": [
+    "# Some tips and tricks"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d34808d5-2ae9-42b2-9db5-5e479d1fe6de",
+   "metadata": {},
+   "source": [
+    "## 1.1 Keyboard Shortcuts"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "550cd56f-c003-414f-92aa-c86600a40714",
+   "metadata": {},
+   "source": [
+    "Run cell is **Cntrl + Enter**\n",
+    "\n",
+    "Run cell and move to next is **Shift + Enter**\n",
+    "\n",
+    "Convert cell to code cell is **Esc + Y**\n",
+    "\n",
+    "Convert cell to Markdown cell is **Esc + M**\n",
+    "\n",
+    "Create new cell is **Esc + A** (above) and **Esc + B** (below)\n",
+    "\n",
+    "Copy cell is **C**\n",
+    "\n",
+    "Paste cell is **V** \n",
+    "\n",
+    "Merge cells is **Shift + M** \n",
+    "\n",
+    "Delete cell is **Esc + D + D**"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "56a9274c",
+   "metadata": {},
+   "source": [
+    "## 1.2 Shell commands"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "bf130bee-f704-4813-bf1b-a07587fcf507",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\sophi\\OneDrive\\Documents\\GitHub\\learning-portfolio-2024-aug-sophieemmatann2103\\1.1_using_jupyter\n"
+     ]
+    }
+   ],
+   "source": [
+    "!cd"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "97fcc9c9-693d-484b-bc07-5c2054fc090f",
+   "metadata": {},
+   "source": [
+    "This will print the **c**urrent working **d**irectory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "1cade8b3-d6ee-4e8b-8275-66927b91b77b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Volume in drive C is Book 13\n",
+      " Volume Serial Number is DFB9-A773\n",
+      "\n",
+      " Directory of C:\\Users\\sophi\\OneDrive\\Documents\\GitHub\\learning-portfolio-2024-aug-sophieemmatann2103\\1.1_using_jupyter\n",
+      "\n",
+      "08/15/2024  05:15 PM    <DIR>          .\n",
+      "08/13/2024  10:40 AM    <DIR>          ..\n",
+      "08/15/2024  04:54 PM    <DIR>          .ipynb_checkpoints\n",
+      "08/15/2024  04:54 PM            10,650 jupyter_need_2.ipynb\n",
+      "08/15/2024  05:15 PM             3,334 using_jupyter_(good).ipynb\n",
+      "08/15/2024  03:10 PM             3,583 using_jupyter_(need).ipynb\n",
+      "               3 File(s)         17,567 bytes\n",
+      "               3 Dir(s)  866,631,958,528 bytes free\n"
+     ]
+    }
+   ],
+   "source": [
+    "!dir "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3c75c1ec-514a-41ea-9f4e-52644de2cdd4",
+   "metadata": {},
+   "source": [
+    "This will show you a list of all the files in your folder."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "14651511",
+   "metadata": {},
+   "source": [
+    "## Enabling the extensions"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "1fcd4149",
+   "metadata": {},
+   "source": [
+    "# Shell Magic"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "81d33315-dd2f-4d65-841c-9caf4cf33de6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "38.4 ns ± 0.867 ns per loop (mean ± std. dev. of 7 runs, 10,000,000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit x=10"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7e3e2188-7b57-417e-ac2f-bf931bc0749a",
+   "metadata": {},
+   "source": [
+    "This is called **line magic**. It will run and tell us how long the command takes to execute."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "39e5a0da-dbdd-4480-a105-48f6679a78df",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "39.1 ns ± 0.498 ns per loop (mean ± std. dev. of 7 runs, 10,000,000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "x=10"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e862b20a-b9b3-4e4f-8d9b-7a73927d9c1e",
+   "metadata": {},
+   "source": [
+    "This is called **cell magic** and it will tell us how long the command takes to run the entire cell."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "917de66a-3289-4bf8-baad-a907e6b8f567",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/json": {
+       "cell": {
+        "!": "OSMagics",
+        "HTML": "Other",
+        "SVG": "Other",
+        "bash": "Other",
+        "capture": "ExecutionMagics",
+        "cmd": "Other",
+        "code_wrap": "ExecutionMagics",
+        "debug": "ExecutionMagics",
+        "file": "Other",
+        "html": "DisplayMagics",
+        "javascript": "DisplayMagics",
+        "js": "DisplayMagics",
+        "latex": "DisplayMagics",
+        "markdown": "DisplayMagics",
+        "perl": "Other",
+        "prun": "ExecutionMagics",
+        "pypy": "Other",
+        "python": "Other",
+        "python2": "Other",
+        "python3": "Other",
+        "ruby": "Other",
+        "script": "ScriptMagics",
+        "sh": "Other",
+        "svg": "DisplayMagics",
+        "sx": "OSMagics",
+        "system": "OSMagics",
+        "time": "ExecutionMagics",
+        "timeit": "ExecutionMagics",
+        "writefile": "OSMagics"
+       },
+       "line": {
+        "alias": "OSMagics",
+        "alias_magic": "BasicMagics",
+        "autoawait": "AsyncMagics",
+        "autocall": "AutoMagics",
+        "automagic": "AutoMagics",
+        "autosave": "KernelMagics",
+        "bookmark": "OSMagics",
+        "cd": "OSMagics",
+        "clear": "KernelMagics",
+        "cls": "KernelMagics",
+        "code_wrap": "ExecutionMagics",
+        "colors": "BasicMagics",
+        "conda": "PackagingMagics",
+        "config": "ConfigMagics",
+        "connect_info": "KernelMagics",
+        "copy": "Other",
+        "ddir": "Other",
+        "debug": "ExecutionMagics",
+        "dhist": "OSMagics",
+        "dirs": "OSMagics",
+        "doctest_mode": "BasicMagics",
+        "echo": "Other",
+        "ed": "Other",
+        "edit": "KernelMagics",
+        "env": "OSMagics",
+        "gui": "BasicMagics",
+        "hist": "Other",
+        "history": "HistoryMagics",
+        "killbgscripts": "ScriptMagics",
+        "ldir": "Other",
+        "less": "KernelMagics",
+        "load": "CodeMagics",
+        "load_ext": "ExtensionMagics",
+        "loadpy": "CodeMagics",
+        "logoff": "LoggingMagics",
+        "logon": "LoggingMagics",
+        "logstart": "LoggingMagics",
+        "logstate": "LoggingMagics",
+        "logstop": "LoggingMagics",
+        "ls": "Other",
+        "lsmagic": "BasicMagics",
+        "macro": "ExecutionMagics",
+        "magic": "BasicMagics",
+        "mamba": "PackagingMagics",
+        "matplotlib": "PylabMagics",
+        "micromamba": "PackagingMagics",
+        "mkdir": "Other",
+        "more": "KernelMagics",
+        "notebook": "BasicMagics",
+        "page": "BasicMagics",
+        "pastebin": "CodeMagics",
+        "pdb": "ExecutionMagics",
+        "pdef": "NamespaceMagics",
+        "pdoc": "NamespaceMagics",
+        "pfile": "NamespaceMagics",
+        "pinfo": "NamespaceMagics",
+        "pinfo2": "NamespaceMagics",
+        "pip": "PackagingMagics",
+        "popd": "OSMagics",
+        "pprint": "BasicMagics",
+        "precision": "BasicMagics",
+        "prun": "ExecutionMagics",
+        "psearch": "NamespaceMagics",
+        "psource": "NamespaceMagics",
+        "pushd": "OSMagics",
+        "pwd": "OSMagics",
+        "pycat": "OSMagics",
+        "pylab": "PylabMagics",
+        "qtconsole": "KernelMagics",
+        "quickref": "BasicMagics",
+        "recall": "HistoryMagics",
+        "rehashx": "OSMagics",
+        "reload_ext": "ExtensionMagics",
+        "ren": "Other",
+        "rep": "Other",
+        "rerun": "HistoryMagics",
+        "reset": "NamespaceMagics",
+        "reset_selective": "NamespaceMagics",
+        "rmdir": "Other",
+        "run": "ExecutionMagics",
+        "save": "CodeMagics",
+        "sc": "OSMagics",
+        "set_env": "OSMagics",
+        "store": "StoreMagics",
+        "sx": "OSMagics",
+        "system": "OSMagics",
+        "tb": "ExecutionMagics",
+        "time": "ExecutionMagics",
+        "timeit": "ExecutionMagics",
+        "unalias": "OSMagics",
+        "unload_ext": "ExtensionMagics",
+        "who": "NamespaceMagics",
+        "who_ls": "NamespaceMagics",
+        "whos": "NamespaceMagics",
+        "xdel": "NamespaceMagics",
+        "xmode": "BasicMagics"
+       }
+      },
+      "text/plain": [
+       "Available line magics:\n",
+       "%alias  %alias_magic  %autoawait  %autocall  %automagic  %autosave  %bookmark  %cd  %clear  %cls  %code_wrap  %colors  %conda  %config  %connect_info  %copy  %ddir  %debug  %dhist  %dirs  %doctest_mode  %echo  %ed  %edit  %env  %gui  %hist  %history  %killbgscripts  %ldir  %less  %load  %load_ext  %loadpy  %logoff  %logon  %logstart  %logstate  %logstop  %ls  %lsmagic  %macro  %magic  %mamba  %matplotlib  %micromamba  %mkdir  %more  %notebook  %page  %pastebin  %pdb  %pdef  %pdoc  %pfile  %pinfo  %pinfo2  %pip  %popd  %pprint  %precision  %prun  %psearch  %psource  %pushd  %pwd  %pycat  %pylab  %qtconsole  %quickref  %recall  %rehashx  %reload_ext  %ren  %rep  %rerun  %reset  %reset_selective  %rmdir  %run  %save  %sc  %set_env  %store  %sx  %system  %tb  %time  %timeit  %unalias  %unload_ext  %who  %who_ls  %whos  %xdel  %xmode\n",
+       "\n",
+       "Available cell magics:\n",
+       "%%!  %%HTML  %%SVG  %%bash  %%capture  %%cmd  %%code_wrap  %%debug  %%file  %%html  %%javascript  %%js  %%latex  %%markdown  %%perl  %%prun  %%pypy  %%python  %%python2  %%python3  %%ruby  %%script  %%sh  %%svg  %%sx  %%system  %%time  %%timeit  %%writefile\n",
+       "\n",
+       "Automagic is ON, % prefix IS NOT needed for line magics."
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%lsmagic "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "7595cd62",
+   "metadata": {},
+   "source": [
+    "# The Kernel"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a8b0b43e-707a-4a68-814d-36bbebc3b549",
+   "metadata": {},
+   "source": [
+    "We can stop the kernel if things get too out of hand. We can just go to the command bar at the top and press Shut Down Kernel. "
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.3"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+   }
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
