READY FOR REVIEW_using_jupyter_(need),_exercises

--- a/1.2_using_jupyter_,_exercises/using_jupyter_(need),_exercises.ipynb
+++ b/1.2_using_jupyter_,_exercises/using_jupyter_(need),_exercises.ipynb
@@ -119,26 +119,20 @@
    "source": [
     " \n",
     "$$\\mu = \n",
-    "\\frac{1}{n}\\sum_{i=1}^{n} x_i\n",
-    "$$ \n",
-    "\n",
-    "$$\\sigma =\n",
-    "\\sqrt{\\frac{1}{n}\\sum_{i=1}^{n}(x_i - \\mu)^2}                   \n",
+    "\\dfrac{1}{n}\\sum_{i=1}^{n} x_i\n",
     "$$\n",
     "\n",
-    "$$r = \n",
-    "\\frac{\\sum_{i=1}^{n}(x_i - \\mu_X)(y_i - \\mu_Y)}\n",
-    "{\\sqrt{\\sum_{{i=1}^{n}(x_i - \\mu_X)^2}{\\sum_{i=1}^{n}(y_i - \\mu_Y)^2}}\n",
-    "$$"
+    "\n",
+    "$$\\sigma =\n",
+    "\\sqrt{\\dfrac{1}{n}\\sum_{i=1}^{n}(x_i - \\mu)^2}                   \n",
+    "$$\n",
+    "\n",
+    "\n",
+    "$$ r = \\dfrac\n",
+    "{\\sum_{i=1}^{n}(x_i - \\mu_X)(y_i - \\mu_Y)}\n",
+    "{\\sqrt{\\sum_{i=1}^{n}(x_i - \\mu_X)^2\\sum_{i=1}^{n}(y_i - \\mu_Y)^2}}\n",
+    "$$ "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2ed0b214-fb7c-433d-8f1f-f30a5b76886d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
