READY_FOR_REVIEW_fundamentals_(need)_exercises

--- a/2.2_fundamentals__exercises/fundamentals_(need)_exercises.ipynb
+++ b/2.2_fundamentals__exercises/fundamentals_(need)_exercises.ipynb
@@ -222,7 +222,7 @@
    "id": "bae00c06-6b89-442d-b6bb-19c0a52b91e4",
    "metadata": {},
    "source": [
-    "% is the modulus operator in Python, which returns the remainder of the division of one number by another.\n",
+    "% is the **modulus operator** in Python, which returns the remainder of the division of one number by another.\n",
     "\n",
     "5÷2=2 with a remainder of 1. Therefore, 5 % 2 results in 1."
    ]
