READY_FOR_REVIEW_fundamentals_(need)_exercises

--- a/2.1_fundamentals/fundamentals_(need).ipynb
+++ b/2.1_fundamentals/fundamentals_(need).ipynb
@@ -473,7 +473,9 @@
    "cell_type": "code",
    "execution_count": 17,
    "id": "822afc43-36c9-415d-ae19-7314b59b4253",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "ename": "IndentationError",
