--- a/2.1_fundamentals/fundamentals_(need).ipynb
+++ b/2.1_fundamentals/fundamentals_(need).ipynb
@@ -826,7 +826,7 @@
    "source": [
     "So what is the difference in how the {} are used? How to identify what is a set and not? \n",
     "\n",
-    "Ans: The difference is denoted by : so next time when we see : in {}, it will mean a dictionary. "
+    "Ans: The difference is denoted by : so next time when we see : in {}, it will mean a dictionary instead."
    ]
   },
   {
