--- a/2.2_fundamentals__exercises/fundamentals_(need)_exercises.ipynb
+++ b/2.2_fundamentals__exercises/fundamentals_(need)_exercises.ipynb
@@ -224,7 +224,7 @@
    "source": [
     "% is the **modulus operator** in Python, which returns the remainder of the division of one number by another.\n",
     "\n",
-    "5÷2=2 with a remainder of 1. Therefore, 5 % 2 results in 1."
+    "5÷2=2 with a remainder of 1. Thus, 5 % 2 results in 1."
    ]
   }
  ],
