--- a/2.2_fundamentals__exercises/fundamentals_(need)_exercises.ipynb
+++ b/2.2_fundamentals__exercises/fundamentals_(need)_exercises.ipynb
@@ -114,16 +114,16 @@
    "source": [
     "|**#** |**Term**      |**Description** |\n",
     "|:---  |:---          | :---           |\n",
-    "|1     |Function      | Let's us do something in the program (recognised as input).        \n",
-    "|2     |Arguments     | An input/actual value passed to a function that influences its behaviour.\n",
-    "|3     |Comments      | Gives us reminders on what the code does or what some unusual numbers/letters mean.\n",
-    "|4     |Indentations  | Tells the system which to code and which not to code.\n",
-    "|5     |Packages      | Functions not pre-installed/recognised in the system's most basic form and is part of add-ons to create more complex codes. \n",
-    "|6     |.             | Represents ownership, whereby the latter function belongs to the former.\n",
-    "|7     |:             | Is a colon and is used to designate a block of code.\n",
-    "|8     |[]            | A type of bracket in Python and is used for listing data.\n",
-    "|9     |[[],[]]       | A list which contains two empty lists.\n",
-    "|10    |{}            | Another type of bracket in Python used to store data in a 'thing' called a dictionary."
+    "|1     |Function      | Let's us do something in the program (recognised as input).|       \n",
+    "|2     |Arguments     | An input/actual value passed to a function that influences its behaviour.|\n",
+    "|3     |Comments      | Gives us reminders on what the code does or what some unusual numbers/letters mean.|\n",
+    "|4     |Indentations  | Tells the system which to code and which not to code.|\n",
+    "|5     |Packages      | Functions not pre-installed/recognised in the system's most basic form and is part of add-ons to create more complex codes.|\n",
+    "|6     |.             | Represents ownership, whereby the latter function belongs to the former.|\n",
+    "|7     |:             | Is a colon and is used to designate a block of code.|\n",
+    "|8     |[]            | A type of bracket in Python and is used for listing data.|\n",
+    "|9     |[[],[]]       | A list which contains two empty lists.|\n",
+    "|10    |{}            | Another type of bracket in Python used to store data in a 'thing' called a dictionary.|"
    ]
   },
   {
