READY_FOR_REVIEW_fundamentals_(good)_exercises

--- a/2.2_fundamentals__exercises/fundamentals_(good)_exercises.ipynb
+++ b/2.2_fundamentals__exercises/fundamentals_(good)_exercises.ipynb
@@ -124,27 +124,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
-   "id": "7f0b66ee-2c9d-4b7f-8ec8-bbc4cb260535",
+   "execution_count": 30,
+   "id": "e0501331-0eef-4db4-8996-ee04cf622923",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "unsupported format string passed to list.__format__",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[96], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Defining the items and their prices\u001b[39;00m\n\u001b[0;32m      2\u001b[0m items \u001b[38;5;241m=\u001b[39m [(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mApple\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;241m0.99\u001b[39m), (\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mBanana\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;241m0.59\u001b[39m), (\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mOrange\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;241m1.29\u001b[39m)]\n\u001b[1;32m----> 4\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43mitems\u001b[49m\u001b[38;5;132;43;01m:\u001b[39;49;00m\u001b[38;5;124;43m10\u001b[39;49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[38;5;124m'\u001b[39m)\n",
-      "\u001b[1;31mTypeError\u001b[0m: unsupported format string passed to list.__format__"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Apple      $ 0.99\n",
+      "Banana     $ 0.59\n",
+      "Orange     $ 1.29\n"
      ]
     }
    ],
    "source": [
-    "# Defining the items and their prices\n",
-    "items = [(\"Apple\", 0.99), (\"Banana\", 0.59), (\"Orange\", 1.29)]\n",
+    "# Define the items and their prices\n",
+    "items = [\n",
+    "    (\"Apple\", 0.99),\n",
+    "    (\"Banana\", 0.59),\n",
+    "    (\"Orange\", 1.29)\n",
+    "]\n",
     "\n",
-    "print(f'{items:10}')"
+    "# Print each item and its price with the specified formatting\n",
+    "for item, price in items:\n",
+    "    print(f\"{item:<10} $ {price:>4.2f}\")"
    ]
   },
   {
@@ -207,43 +211,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
-   "id": "04fd4e24-bfd2-49d5-9bc8-7b9bf7989fe6",
+   "execution_count": 32,
+   "id": "018587a2-8a50-4251-9529-3c6566d6f3f1",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Invalid input\n",
-      "1\n"
+      "120\n",
+      "Invalid input\n"
      ]
     }
    ],
    "source": [
     "def factorial(n):\n",
-    "    if n > 0:\n",
+    "    if n < 0:  # Error 1: Check for negative input\n",
     "        return \"Invalid input\"\n",
-    "    elif n != 0:\n",
+    "    elif n == 0:  # Error 2: Factorial of 0 is 1\n",
     "        return 1\n",
     "    else:\n",
     "        result = 1\n",
-    "        for number in range(1, n+1):\n",
-    "            result += number\n",
+    "        for number in range(1, n + 1):\n",
+    "            result *= number  # Error 3: Multiply to calculate factorial\n",
     "        return result\n",
     "\n",
-    "\n",
-    "print(factorial(5))   # Testing, expected output: 120\n",
-    "print(factorial(-1))  # Testing, expected output: Invalid input"
+    "# Testing the function\n",
+    "print(factorial(5))   # Expected output: 120\n",
+    "print(factorial(-1))  # Expected output: Invalid input"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "018587a2-8a50-4251-9529-3c6566d6f3f1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
